Fix text clipping in takeover replay feed

--- a/hsreplaynet/static/styles/home.scss
+++ b/hsreplaynet/static/styles/home.scss
@@ -949,6 +949,14 @@
 					}
 				}
 
+				&.event-left {
+					text-align: right;
+
+					em {
+						padding-right: 0.15em;
+					}
+				}
+
 				&.player-right {
 					flex-direction: row;
 					text-align: left;
